refactor wire structure
